# MLOps_Demo

./: .dockerignore  .gitignore  Dockerfile  app.py  generate_samples.py  get_best_model.py  pyproject.toml  train.py
.github/workflows/: docker-publish.yml
model_best/model/: MLmodel  conda.yaml  model.pkl
templates/: index.html
